# ariadne-search

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml
.postman/: resources.yaml
api/: Dockerfile  README.md  UNIT_TEST_PLAN.md  pyproject.toml
api/src/kb_api/: config.py  dependencies.py  models.py
api/src/kb_api/routers/: health.py
api/src/kb_api/services/: answer_generator.py  search_service.py
api/src/kb_api/storage/: neo4j_graph.py
api/tests/: conftest.py  test_answer_generator.py  test_api_config.py  test_app_routers_main.py  test_embedder.py  test_query_classifier.py  test_search_service.py  test_storage.py
api_kb/: Dockerfile  README.md
arch/: 01-architecture-overview-v2-multimodal.puml  02-er-model-v2-multimodal.puml  03-etl-sequence-v2-multimodal.puml  04-search-sequence-v2-multimodal.puml  05-deployment-v2-multimodal.puml
bootstrap/: 001_neo4j_init.cypher
init/: bootstrap.sh
init/neo4j/: 001_neo4j_init.cypher
postman/: ariadne-search-local.postman_environment.json  ariadne-search-remote.postman_environment.json  ariadne-search.postman_collection.json
scripts/: force-upload-knowledge.sh
worker/: .dockerignore  Dockerfile  README.md  UNIT_TEST_PLAN.md  pyproject.toml
worker/src/kb_worker/: app.py  config.py  dependencies.py  main.py  models.py  pipeline.py  scheduler.py
worker/src/kb_worker/extractors/: office_pdf.py
worker/src/kb_worker/routers/: dummy.py  health.py
worker/src/kb_worker/services/: chunker.py  classifier.py  embedder.py  enricher.py  ingest.py  scanner.py
worker/src/kb_worker/storage/: neo4j_projection.py  postgres.py
worker/tests/: conftest.py  test_chunker.py  test_classifier.py  test_code_parser.py  test_dummy_api.py  test_embedder.py  test_enricher_entity.py  test_extractors.py  test_pipeline.py  test_scanner.py  test_scheduler_main.py  test_storage.py  test_worker_config.py
worker_kb/: README.md
(+22 files in other folders)
